# PrograEstructuras02

./: CMakeCache.txt  CMakeLists.txt  Makefile  PrograEstructuras02  Pruebas Progra2  Pruebas Progra2.c  archivo.txt  cmake_install.cmake  main.c
Articulo/: Articulo.h
Estructuras/: Articulo.h  Monticulo.h
Impresor/: Impresor.c  Impresor.h
Lector/: Lector.c  Lector.h
Menu/: Menu.c  Menu.h
Programa/: Programa.c  Programa.h
